     lane="simd-lane-id" information if -l argument was specified.

     Also the MI output of -break-list and -break-info commands will have
     lane="simd-lane-id" information if the breakpoint is thread and SIMD lane
     spefific.

  ** '-thread-info'

     If a thread is stopped, available, and has SIMD lanes, MI output
     of '-thread-info' for such a thread contains 'execution-mask' and
     'simd-width' fields.

  ** '-device-info'

     Added new MI command '-device-info' which is equivalent to CLI command
     'info devices'.

  ** Stop events include execution-mask, simd-width and hit-lanes-mask fields if
     available.

  ** '-thread-simd-width'

     Added new MI command '-thread-simd-width' which returns the SIMD width of a
     stopped thread.

  ** '-thread-execution-mask'

     Added new MI command for getting thread execution mask.

* New remote packets

qXfer:libraries:read's response

  The qXfer:libraries:read query supports reporting in-memory libraries.  GDB
  indicates support by supplying qXfer:libraries:read:in-memory-library+ in the
  qSupported packet.

vAck:library
vAck:in-memory-library

  Acknowledge libraries to gdbserver when requested.  Libraries are acknowledged
  after the initial processing by GDB such as loading symbols and placing
  breakpoints.

U stop reply

  Indicates that threads are currently unavailable.  We tried stopping them but
  they did not respond.  The remote stub reports support for this stop reply to
  GDB's qSupported query.

qFixedThreadList

  Query packet to check if the target's thread list is fixed.

*** Changes in GDB 14

* GDB now supports the AArch64 Scalable Matrix Extension 2 (SME2), which
  includes a new 512 bit lookup table register named ZT0.

* GDB now supports the AArch64 Scalable Matrix Extension (SME), which includes
  a new matrix register named ZA, a new thread register TPIDR2 and a new vector
  length register SVG (streaming vector granule).  GDB also supports tracking